CSS grid layout bug fixed

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   border-radius: 50%;
   margin-right: 5px;
   margin-top: 10px;
-  color:#181010;;
+  color:#181010;
   background-color: rgba(206, 205, 205, 0.905);
 }
 
@@ -60,7 +60,7 @@ h1{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 40%;
-  height: 40%;
+  height: 40%; 
   margin-bottom: 5%;
 }
 
@@ -71,8 +71,8 @@ h1{
     border: 3px solid rgba(136, 131, 131, 0.905);
     font-size: 7rem;
     font-family: 'Indie Flower', cursive;
-    padding-bottom: 10%;
     color:rgba(72, 5, 5, 0.624);
+    height: 175px;
   }
 
 
